# App-LabRecorder

./: .travis.yml  App-LabRecorder.code-workspace  BUILD.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  LabRecorder.cfg
.github/workflows/: cppcmake.yml
doc/: templates.md
openspec/: project.md
openspec/changes/add-cross-platform-builds-and-app-icon/: design.md  proposal.md  tasks.md
openspec/changes/add-cross-platform-builds-and-app-icon/specs/app-branding/: spec.md
openspec/changes/add-cross-platform-builds-and-app-icon/specs/build-process/: spec.md
openspec/changes/add-hostname-filename-token/: proposal.md  tasks.md
openspec/changes/add-toggleable-windows-console/: proposal.md  tasks.md
openspec/changes/add-windows-single-file-exe/: design.md  proposal.md  tasks.md
openspec/changes/add-windows-single-file-exe/specs/build-process/: spec.md
openspec/changes/archive/2025-10-09-add-toggleable-windows-console/: design.md
openspec/changes/archive/2025-10-09-add-toggleable-windows-console/specs/ui/console-visibility/: spec.md
openspec/changes/archive/2025-10-17-add-hostname-filename-token/specs/templates/: spec.md
openspec/changes/fix-duplicate-streams-on-config-load/: proposal.md  tasks.md
openspec/changes/fix-duplicate-streams-on-config-load/specs/stream-selection/: spec.md
openspec/specs/templates/: spec.md
res/: labrecorder.desktop
scripts/windows/: make-single-file-exe.ps1
src/: IconFlasher.cpp  IconFlasher.h  all_integrated_mainwindow.ui  lsl_logger.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  win_console.h
